--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -111,32 +111,31 @@
 
 /* WebKit browsers (Chrome, Safari) */
 ::-webkit-scrollbar {
-    width: 8px;
+    width: 4px;
     background-color: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #a2c3de; /* Thumb color */
-    border-radius: 6px;
+    background-color: #495057; /* Thumb color */
+    border-radius: 20px;
 }
 
 ::-webkit-scrollbar-track {
-    background-color: #f1f1f3; /* Track color */
+    background-color: #adb5bd; /* Track color */
 }
 
-
 html.dark ::-webkit-scrollbar {
-    width: 8px;
+    width: 4px;
     background-color: transparent;
 }
 
 html.dark ::-webkit-scrollbar-thumb {
-    background-color: #031a25; /* Thumb color */
+    background-color: #212529; /* Thumb color */
     border-radius: 6px;
 }
 
 html.dark ::-webkit-scrollbar-track {
-    background-color: #0a2d3e; /* Track color */
+    background-color: #343a40; /* Track color */
 }
 
 html.dark .ck-reset_all :not(.ck-reset_all-excluded *),
@@ -153,11 +152,11 @@ html.dark a.ck.ck-button:not(.ck-disabled):hover,
 html.dark .ck.ck-button:not(.ck-disabled):active,
 html.dark a.ck.ck-button:not(.ck-disabled):active,
 html.dark .ck.ck-button.ck-on,
-html.dark a.ck.ck-button.ck-on{
+html.dark a.ck.ck-button.ck-on {
     background-color: rgb(15, 23, 42);
 }
 
-html.dark .ck.ck-editor__main>.ck-editor__editable {
+html.dark .ck.ck-editor__main > .ck-editor__editable {
     background-color: rgb(30, 41, 59);
     color: white;
 }
